<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_history_export"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/outline_import_export_24"
        app:iconTint="?android:textColorPrimary"
        android:title="@string/export_label">
        <menu>
            <item
                android:id="@+id/menu_history_export_as_csv"
                app:showAsAction="ifRoom|withText"
                android:title="@string/export_csv_label"/>
            <item
                android:id="@+id/menu_history_export_as_json"
                app:showAsAction="ifRoom|withText"
                android:title="@string/export_json_label"/>
            <item
                android:id="@+id/menu_history_import_json"
                app:showAsAction="ifRoom|withText"
                android:title="@string/import_json_label"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_history_delete_all"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/baseline_delete_forever_24"
        app:iconTint="?android:textColorPrimary"
        android:title="@string/menu_item_history_delete"/>
</menu>