<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.views.fragments.barcodeAnalysis.contents.DevAppsDevAppsBarcodeMatrixContactFragmentDevApps">

    <!-- Name -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_contact_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/normal_margin"
        app:title_text="@string/matrix_contact_name_label" />

    <!-- Organization -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_contact_organization_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_contact_name_layout"
        app:title_text="@string/matrix_contact_organisation_label" />

    <!-- Title -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_contact_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_contact_organization_layout"
        app:title_text="@string/matrix_contact_job_title_label" />

    <!-- URL -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_contact_url_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_contact_title_layout"
        app:title_text="@string/matrix_uri_url_label" />

    <!-- Phone -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_contact_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_contact_url_layout"
        app:title_text="@string/matrix_contact_phone_label" />

    <!-- E-Mail -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_contact_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_contact_phone_layout"
        app:title_text="@string/matrix_contact_mail_label" />

    <!-- Address -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_contact_address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_contact_email_layout"
        app:title_text="@string/matrix_contact_address_label" />

    <!-- Notes -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_contact_notes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_contact_address_layout"
        app:title_text="@string/matrix_contact_notes_label" />

</RelativeLayout>