<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.views.fragments.barcodeAnalysis.contents.DevAppsDevAppsBarcodeMatrixAgendaFragmentDevApps">

    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_agenda_name_event_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/normal_margin"
        app:title_text="@string/matrix_agenda_name_event_label" />

    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_agenda_start_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_agenda_name_event_layout"
        app:title_text="@string/matrix_agenda_start_date_event_label" />

    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_agenda_end_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_agenda_start_date_layout"
        app:title_text="@string/matrix_agenda_end_date_event_label" />

    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_agenda_place_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_agenda_end_date_layout"
        app:title_text="@string/matrix_agenda_place_event_label" />

    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_agenda_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_agenda_place_layout"
        app:title_text="@string/matrix_agenda_description_event_label" />

</RelativeLayout>