<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.views.fragments.barcodeAnalysis.contents.DevAppsDevAppsBarcodeMatrixWifiFragmentDevApps">

    <!-- SSID -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_wifi_ssid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/normal_margin"
        app:title_text="@string/matrix_wifi_ssid_label" />

    <!--- Password -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_wifi_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_barcode_matrix_wifi_ssid_layout"
        android:paddingTop="@dimen/large_margin"
        app:title_text="@string/matrix_wifi_password_label" />

    <!--- Encryption -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_wifi_encryption_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_barcode_matrix_wifi_password_layout"
        android:paddingTop="@dimen/large_margin"
        app:title_text="@string/matrix_wifi_encryption_label" />

    <!--- Is Hidden -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_wifi_is_hidden_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_barcode_matrix_wifi_encryption_layout"
        android:paddingTop="@dimen/large_margin"
        app:title_text="@string/matrix_wifi_is_hidden_label" />

</RelativeLayout>