<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.views.fragments.barcodeAnalysis.contents.DevAppsBarcodeMatrixUpiParsedFragment">

    <View
        android:id="@+id/fragment_barcode_matrix_upi_parsed_separator"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/stroke_width"
        android:background="?colorOutline"
        android:paddingTop="@dimen/large_margin"
        android:layout_centerHorizontal="true"/>

    <!-- UPI ID -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_upi_parsed_upi_id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_upi_parsed_separator"
        app:title_text="@string/matrix_uri_upi_id_label" />

    <!-- Payee Name -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_upi_parsed_payee_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_upi_parsed_upi_id_layout"
        app:title_text="@string/matrix_uri_upi_payee_name_label" />

    <!-- Amount -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_upi_parsed_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_upi_parsed_payee_name_layout"
        app:title_text="@string/matrix_uri_upi_amount_label" />

    <!-- Currency -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_upi_parsed_currency_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_upi_parsed_amount_layout"
        app:title_text="@string/matrix_uri_upi_currency_label" />

    <!-- Description -->
    <com.devappspros.barcodescanner.presentation.customView.DevAppsBarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_upi_parsed_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_upi_parsed_currency_layout"
        app:title_text="@string/matrix_uri_upi_description_label" />

</RelativeLayout>